# supabase-miso-read

./: .gitignore  Makefile  README.md  app.cabal  cabal.project  flake.nix
.github/workflows/: main.yml
src/: Bible.hs  Interop.hs  Main.hs
static/: index.html
supabase/: schema.sql
tmp/: package.json  supabase1.mjs  supabase2.mjs
